# AdaptiveCards

./: .clang-format  .editorconfig  .gitignore  .swp  ACAndroidSetVersion.ps1  ACSetVersion.ps1  ACSetVersion.sh  ACTest.bat  ACTest.ps1  ACiOSPrepPublish.sh  APISpec.md  AdaptiveCardToolkit.sln  AdaptiveCards.podspec  AdaptiveCards.sln  CONTRIBUTING.md  Docs.sln  LICENSE  Package.swift  README.md  RendererStatus.md  SUPPORT.md  SemanticSamples.md  SemanticStructure.md  THIRD-PARTY-NOTICES.TXT  UpdatePodSpec.py  custom.props  explorer.html  gulpfile.js  index.html  log  package-lock.json  package.json  publish-visualizer.cmd  requirements.txt  simple.json  t  test.py  tsconfig.json  webpack.config.js
source/android/adaptivecards/: .gitignore  .project  CMakeLists.txt  build.gradle  gradle.properties  proguard-rules.pro
source/android/adaptivecards/src/: AdaptiveCardObjectModel.i  run_swig.sh
source/android/adaptivecards/src/main/: AndroidManifest.xml
source/android/adaptivecards/src/main/cpp/: .gitattributes  objectmodel_wrap.cpp  objectmodel_wrap.h
source/ios/AdaptiveCards/AdaptiveCards/AdaptiveCards/: ACFramework.h  ACOActionOverflow.h  ACOActionOverflow.mm  ACOActionOverflowPrivate.h  ACOAdaptiveCard.h  ACOAdaptiveCard.mm  ACOAdaptiveCardParseResult.h  ACOAdaptiveCardParseResult.mm  ACOAdaptiveCardPrivate.h  ACOAdaptiveCards.h  ACOAdaptiveCards.m  ACOAdaptiveCards.mm  ACOAdaptiveCardsInternal.h  ACOAdaptiveCardsInternal.mm  ACOAuthCardButtonPrivate.h  ACOAuthentication.h  ACOAuthentication.mm  ACOAutoCardButton.mm  ACOBaseActionElement.h  ACOBaseActionElement.mm  ACOBaseActionElementPrivate.h  ACOBaseCardElement.h  ACOBaseCardElement.mm  ACOBaseCardElementPrivate.h  ACOBundle.h  ACOBundle.m  ACODebouncer.mm  ACOEnums.h  ACOFillerSpaceManager.h  ACOFillerSpaceManager.mm  ACOHostConfig.h  ACOHostConfig.mm  ACOHostConfigInternal.h  ACOHostConfigInternal.mm  ACOHostConfigParseResult.h  ACOHostConfigParseResult.mm  ACOHostConfigPrivate.h  ACOIResourceResolver.h  ACOInputResults.h  ACOInputResults.mm  (+266 more)
source/ios/AdaptiveCards/AdaptiveCards/AdaptiveCards/PrivateHeaders/: ACOActionOverflowPrivate.h  ACOAdaptiveCardPrivate.h  ACOAuthCardButtonPrivate.h  ACOAuthenticationPrivate.h  ACOBaseActionElementPrivate.h  ACOBaseCardElementPrivate.h  ACOHostConfigPrivate.h  ACOMediaEventPrivate.h  ACOParseContextPrivate.h  ACORefreshPrivate.h  ACORemoteResourceInformationPrivate.h  ACOTokenExchangeResourcePrivate.h  ACRChoiceSetViewDataSource.h  ACRChoiceSetViewDataSourceCompactStyle.h  ACRDateTextField.h  ACRImageSetUICollectionView.h  ACRInputLabelViewPrivate.h  ACRParseWarningPrivate.h  ACRRegistrationPrivate.h  ACRRendererPrivate.h  ACRSeparator.h  ACRShowCardTarget.h  ACRTableCellView.h  ACRTargetBuilderDirector.h  ACRToggleInputDataSource.h  ACRToggleVisibilityTarget.h  ACRTypeaheadSearchViewControllerPrivate.h  ACRViewPrivate.h  UtiliOS.h
source/ios/AdaptiveCards/AdaptiveCards/AdaptiveCards/Public/: ACOAdaptiveCard.mm  ACOFillerSpaceManager.h  ACOHostConfig.mm  ACRButton.mm  ACRChoiceSetCompactStyleView.mm  ACRCustomRenderer.mm  ACRImageSetUICollectionView.mm  ACRQuickReplyView.mm  ACRRenderResult.h  ACRRenderResult.mm  ACRRenderer.h  ACRRichTextBlockRenderer.h  ACRTableRenderer.mm  ACRUIImageView.h  ACRUIImageView.mm
source/ios/AdaptiveCards/AdaptiveCards/AdaptiveCards/PublicHeaders/: ACOAdaptiveCardParseResult.h  ACOAuthCardButton.h  ACOAutoCardButton.mm  ACORefresh.h  ACOResourceResolvers.mm  ACRActionOverflowRenderer.h  ACRActionSetRenderer.h  ACRActionSetRenderer.mm  ACRBaseTarget.mm  ACRButton.h  ACRChoiceSetCompactStyleView.h  ACRColumnSetRenderer.h  ACRCustomActionRenderer.h  ACRImageSetRenderer.mm  ACRInputChoiceSetRenderer.h  ACRInputNumberRenderer.h  ACRInputToggleRenderer.mm  ACRNumericTextField.mm  ACRParseWarning.h  ACRTableCellRenderer.mm  ACRToggleInputDataSource.mm  ACRUILabel.mm  AdaptiveCards.h  UIProviderRegistrar.h
source/ios/AdaptiveCards/AdaptiveCards/AdaptiveCards/Resources/: ACRButton.xib  ACRButtonExpandable.xib  ACRChoiceSetCellCompactUnchecked.xib  ACRDateTextField.xib  ACRInputTableView.xib  ACRPickerView.xib  ACRQuickActionMultilineView.xib  ACRTextEmailField.xib  ACRTextField.xib  ACRTextNumberField.xib  ACRToggleInputView.xib
source/ios/AdaptiveCards/AdaptiveCards/AdaptiveCards/UIProviders/: FluentTooltipProvider.h  FluentTooltipProvider.m
source/ios/AdaptiveCards/AdaptiveCards/AdaptiveCards/en.lproj/: ACRUIButton.xib
source/ios/AdaptiveCards/AdaptiveCards/AdaptiveCards/global.lproj/: ACRUIButton.xib
source/ios/AdaptiveCards/AdaptiveCards/AdaptiveCards/include/: ACOActionOverflow.h  ACOActionOverflowPrivate.h  ACOAdaptiveCard.h  ACOAdaptiveCardParseResult.h  ACOAdaptiveCardPrivate.h  ACOAuthCardButton.h  ACOAuthCardButtonPrivate.h  ACOAuthentication.h  ACOAuthenticationPrivate.h  ACOBaseActionElement.h  ACOBaseActionElementPrivate.h  ACOBaseCardElement.h  ACOBaseCardElementPrivate.h  ACOEnums.h  ACOFillerSpaceManager.h  ACOHostConfig.h  ACOHostConfigParseResult.h  ACOHostConfigPrivate.h  ACOIResourceResolver.h  ACOInputResults.h  (+174 more)
source/shared/cpp/ObjectModel/: .clang-format  .clang-tidy  ActionParserRegistration.cpp  ActionParserRegistration.h  ActionSet.cpp  ActionSet.h  AdaptiveBase64Util.cpp  AdaptiveBase64Util.h  AdaptiveCard.cpp  AdaptiveCard.h  AdaptiveCardParseException.cpp  AdaptiveCardParseException.h  AdaptiveCardParseWarning.cpp  AdaptiveCardParseWarning.h  AuthCardButton.cpp  AuthCardButton.h  Authentication.cpp  Authentication.h  BackgroundImage.cpp  BackgroundImage.h  Base64.cpp  Base64.h  BaseActionElement.cpp  BaseActionElement.cpp.orig  BaseActionElement.h  BaseActionElement.h.orig  BaseCardElement.cpp  BaseCardElement.h  BaseElement.cpp  BaseElement.h  BaseInputElement.cpp  BaseInputElement.h  CMakeLists.txt  CaptionSource.cpp  CaptionSource.h  Carousel.cpp  Carousel.h  CarouselPage.cpp  CarouselPage.h  ChoiceInput.cpp  (+160 more)
source/shared/cpp/ObjectModel/json/: json-forwards.h  json.h
source/shared/cpp/ObjectModel/md4c/: entity.cpp  md4c-html.cpp  md4c.cpp
source/tools/aclint/aclint/: CMakeLists.txt  aclint.cpp  aclint.h
(+14726 files in other folders)
